; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_templ-pkt.c_udp_checksum.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_templ-pkt.c_udp_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TemplatePacket = type { i64, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TemplatePacket*)* @udp_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udp_checksum(%struct.TemplatePacket* %0) #0 {
  %2 = alloca %struct.TemplatePacket*, align 8
  store %struct.TemplatePacket* %0, %struct.TemplatePacket** %2, align 8
  %3 = load %struct.TemplatePacket*, %struct.TemplatePacket** %2, align 8
  %4 = getelementptr inbounds %struct.TemplatePacket, %struct.TemplatePacket* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.TemplatePacket*, %struct.TemplatePacket** %2, align 8
  %7 = getelementptr inbounds %struct.TemplatePacket, %struct.TemplatePacket* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.TemplatePacket*, %struct.TemplatePacket** %2, align 8
  %10 = getelementptr inbounds %struct.TemplatePacket, %struct.TemplatePacket* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.TemplatePacket*, %struct.TemplatePacket** %2, align 8
  %13 = getelementptr inbounds %struct.TemplatePacket, %struct.TemplatePacket* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.TemplatePacket*, %struct.TemplatePacket** %2, align 8
  %16 = getelementptr inbounds %struct.TemplatePacket, %struct.TemplatePacket* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 %14, %17
  %19 = call i32 @udp_checksum2(i32 %5, i32 %8, i64 %11, i64 %18)
  ret i32 %19
}

declare dso_local i32 @udp_checksum2(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
